Fixed crash in end of turn  Improved documentation

--- a/source/doxygen.config
+++ b/source/doxygen.config
@@ -57,7 +57,7 @@ DISABLE_INDEX        = NO
 # If the EXTRACT_ALL tag is set to YES all classes and functions will be
 # included in the documentation, even if no documentation was available.
 
-EXTRACT_ALL          = NO
+EXTRACT_ALL          = YES
 
 # If the EXTRACT_PRIVATE tag is set to YES all private members of a class
 # will be included in the documentation.
@@ -180,7 +180,7 @@ RECURSIVE            = YES
 # excluded from the INPUT source files. This way you can easily exclude a 
 # subdirectory from a directory tree whose root is specified with the INPUT tag.
 
-EXCLUDE              =
+EXCLUDE              = tools clparser libs
 
 # If the value of the INPUT tag contains directories, you can use the
 # EXCLUDE_PATTERNS tag to specify one or more wildcard patterns to exclude
@@ -302,7 +302,7 @@ PDF_HYPERLINKS       = NO
 # If the GENERATE_MAN tag is set to YES (the default) Doxygen will
 # generate man pages
 
-GENERATE_MAN         = YES
+GENERATE_MAN         = NO
 
 # The MAN_OUTPUT tag is used to specify where the man pages will be put.
 # If a relative path is entered the value of OUTPUT_DIRECTORY will be
