--- a/source/tools/linux/Makefile.in
+++ b/source/tools/linux/Makefile.in
@@ -78,12 +78,12 @@ VERSION = @VERSION@
 
 CXXFLAGS = @CXXFLAGS@ -Dconverter
 
-bin_PROGRAMS = asc_demount                asc_mount                  asc_gfx2pcx                asc_makegfx                asc_mntgraph                asc_viewid                asc_tank2pcx                asc_bin2text                asc_weaponguide 
+bin_PROGRAMS = asc_demount                asc_mount                  asc_makegfx                asc_mntgraph                asc_viewid                asc_tank2pcx                asc_bin2text                asc_weaponguide
 
 
 asc_demount_SOURCES = demount.cpp      basestrm.cpp misc.cpp ascstring.cpp strtmesg.cpp
 asc_mount_SOURCES = mount.cpp        basestrm.cpp misc.cpp ascstring.cpp strtmesg.cpp
-asc_gfx2pcx_SOURCES = bi2pcx.cpp       basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp
+#asc_gfx2pcx_SOURCES     = bi2pcx.cpp       basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp
 asc_makegfx_SOURCES = makegfx.cpp      basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp
 asc_mntgraph_SOURCES = mntgraph.cpp     basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp
 asc_viewid_SOURCES = viewid.cpp       basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp
@@ -93,7 +93,7 @@ asc_weaponguide_SOURCES = weaponguide.cpp  basestrm.cpp misc.cpp ascstring.cpp l
 
 asc_mount_LDADD = -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
 asc_demount_LDADD = -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
-asc_gfx2pcx_LDADD = ../../sdl/libsdl.a -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
+#asc_gfx2pcx_LDADD    = ../../sdl/libsdl.a -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
 asc_makegfx_LDADD = ../../sdl/libsdl.a -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
 asc_mntgraph_LDADD = ../../sdl/libsdl.a -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
 asc_viewid_LDADD = ../../sdl/libsdl.a -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
@@ -117,13 +117,6 @@ asc_demount_LDFLAGS =
 asc_mount_OBJECTS =  mount.o basestrm.o misc.o ascstring.o strtmesg.o
 asc_mount_DEPENDENCIES = 
 asc_mount_LDFLAGS = 
-asc_gfx2pcx_OBJECTS =  bi2pcx.o basestrm.o misc.o ascstring.o loadpcxc.o \
-palette.o sgstream.o newfont.o basegfx.o graphicset.o gameoptions.o \
-CLoadable.o Named.o Property.o PropertyGroup.o stack.o buildingtype.o \
-typen.o vehicletype.o password.o strtmesg.o textfileparser.o \
-terraintype.o objecttype.o textfiletags.o
-asc_gfx2pcx_DEPENDENCIES =  ../../sdl/libsdl.a
-asc_gfx2pcx_LDFLAGS = 
 asc_makegfx_OBJECTS =  makegfx.o basestrm.o misc.o ascstring.o \
 loadpcxc.o palette.o sgstream.o newfont.o basegfx.o graphicset.o \
 gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
@@ -180,16 +173,16 @@ TAR = tar
 GZIP_ENV = --best
 DEP_FILES =  .deps/CLoadable.P .deps/Named.P .deps/Property.P \
 .deps/PropertyGroup.P .deps/ascstring.P .deps/basegfx.P \
-.deps/basestrm.P .deps/bi2pcx.P .deps/bin2text.P .deps/buildingtype.P \
-.deps/demount.P .deps/gameoptions.P .deps/graphicset.P \
-.deps/itemrepository.P .deps/loadpcxc.P .deps/makegfx.P .deps/misc.P \
-.deps/mntgraph.P .deps/mount.P .deps/newfont.P .deps/objecttype.P \
-.deps/palette.P .deps/password.P .deps/pcxtank.P .deps/sgstream.P \
-.deps/stack.P .deps/strtmesg.P .deps/terraintype.P \
-.deps/textfileparser.P .deps/textfiletags.P .deps/typen.P \
-.deps/vehicletype.P .deps/viewid.P .deps/weaponguide.P
-SOURCES = $(asc_demount_SOURCES) $(asc_mount_SOURCES) $(asc_gfx2pcx_SOURCES) $(asc_makegfx_SOURCES) $(asc_mntgraph_SOURCES) $(asc_viewid_SOURCES) $(asc_tank2pcx_SOURCES) $(asc_bin2text_SOURCES) $(asc_weaponguide_SOURCES)
-OBJECTS = $(asc_demount_OBJECTS) $(asc_mount_OBJECTS) $(asc_gfx2pcx_OBJECTS) $(asc_makegfx_OBJECTS) $(asc_mntgraph_OBJECTS) $(asc_viewid_OBJECTS) $(asc_tank2pcx_OBJECTS) $(asc_bin2text_OBJECTS) $(asc_weaponguide_OBJECTS)
+.deps/basestrm.P .deps/bin2text.P .deps/buildingtype.P .deps/demount.P \
+.deps/gameoptions.P .deps/graphicset.P .deps/itemrepository.P \
+.deps/loadpcxc.P .deps/makegfx.P .deps/misc.P .deps/mntgraph.P \
+.deps/mount.P .deps/newfont.P .deps/objecttype.P .deps/palette.P \
+.deps/password.P .deps/pcxtank.P .deps/sgstream.P .deps/stack.P \
+.deps/strtmesg.P .deps/terraintype.P .deps/textfileparser.P \
+.deps/textfiletags.P .deps/typen.P .deps/vehicletype.P .deps/viewid.P \
+.deps/weaponguide.P
+SOURCES = $(asc_demount_SOURCES) $(asc_mount_SOURCES) $(asc_makegfx_SOURCES) $(asc_mntgraph_SOURCES) $(asc_viewid_SOURCES) $(asc_tank2pcx_SOURCES) $(asc_bin2text_SOURCES) $(asc_weaponguide_SOURCES)
+OBJECTS = $(asc_demount_OBJECTS) $(asc_mount_OBJECTS) $(asc_makegfx_OBJECTS) $(asc_mntgraph_OBJECTS) $(asc_viewid_OBJECTS) $(asc_tank2pcx_OBJECTS) $(asc_bin2text_OBJECTS) $(asc_weaponguide_OBJECTS)
 
 all: all-redirect
 .SUFFIXES:
@@ -250,10 +243,6 @@ asc_demount: $(asc_demount_OBJECTS) $(asc_demount_DEPENDENCIES)
 asc_mount: $(asc_mount_OBJECTS) $(asc_mount_DEPENDENCIES)
 	@rm -f asc_mount
 	$(CXXLINK) $(asc_mount_LDFLAGS) $(asc_mount_OBJECTS) $(asc_mount_LDADD) $(LIBS)
-
-asc_gfx2pcx: $(asc_gfx2pcx_OBJECTS) $(asc_gfx2pcx_DEPENDENCIES)
-	@rm -f asc_gfx2pcx
-	$(CXXLINK) $(asc_gfx2pcx_LDFLAGS) $(asc_gfx2pcx_OBJECTS) $(asc_gfx2pcx_LDADD) $(LIBS)
 
 asc_makegfx: $(asc_makegfx_OBJECTS) $(asc_makegfx_DEPENDENCIES)
 	@rm -f asc_makegfx
