--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -66,6 +66,9 @@ MAINCONDATA = @MAINCONDATA@
 MAKEINFO = @MAKEINFO@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
+SDLMM_CONFIG = @SDLMM_CONFIG@
+SDLMM_CXXFLAGS = @SDLMM_CXXFLAGS@
+SDLMM_LIBS = @SDLMM_LIBS@
 SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
