--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -77,7 +77,7 @@ VERSION = @VERSION@
 
 MAINTAINERCLEANFILES = Makefile.in
 
-pkgdata_DATA = main.con 
+pkgdata_DATA = main.con buildings.con mk1.con trrobj.con trrobj2.con
 
 pkgdatadir = $(datadir)/games/@PACKAGE@
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
